--- a/glorylynbantillo.1.html
+++ b/glorylynbantillo.1.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -100,7 +98,7 @@
         <ul>
             <li><b style="color:#EE4B2B">Name: </b> Glory lyn M. Bantillo</li>
             <li><b style="color:#EE4B2B">Course: </b> Bachelor of Science in Information Technology</li>
-            <li><b style="color:#EE4B2B">Hobbies: </b> Reading, Writing, and cooking</li>
+            <li><b style="color:#EE4B2B">Hobbies: </b> Reading, Writing, and Cooking</li>
         </ul>
         <div class="image-container">
             <img src="https://png.pngtree.com/png-clipart/20190516/original/pngtree-fresh-girl-cute-%E8%85%AE-avatar-material-png-image_4028266.jpg" alt="Krizzia Mae M. Moreno Avatar">
