--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <li><b style="color:#EE4B2B">Hobbies: </b> Reading, Writing, and Cooking</li>
         </ul>
         <div class="image-container">
-            <img src="https://png.pngtree.com/png-clipart/20190516/original/pngtree-fresh-girl-cute-%E8%85%AE-avatar-material-png-image_4028266.jpg" alt="Krizzia Mae M. Moreno Avatar">
+            <img "https://www.studytienganh.vn/upload/2022/05/112273.jpg" alt="Glory Lyn M. Bantillo Avatar">
         </div>
     </section>
     
