--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <li><b style="color:#EE4B2B">Hobbies: </b> Reading, Writing, and Cooking</li>
         </ul>
         <div class="image-container">
-            <img "https://www.studytienganh.vn/upload/2022/05/112273.jpg" alt="Glory Lyn M. Bantillo Avatar">
+            <img "https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2Fquick-saves--522558363025927842%2F&psig=AOvVaw16xP3V8kXS036rNpGFAKaV&ust=1734399112722000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCNDMpuCSq4oDFQAAAAAdAAAAABAE.jpg" alt="Glory Lyn M. Bantillo Avatar">
         </div>
     </section>
     
